# oxide-mc

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
.github/workflows/: ci.yml
src/: lib.rs
src/fabric_manifest_model/: mod.rs
src/functions/: mod.rs
src/launcher/: mod.rs
src/manifest_indexes/: mod.rs
src/models/: mod.rs
tests/: testes.rs
