[package]
name = "mc-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.52.1", features = ["full"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
hex = "0.4.3"
