[package]
name = "oxide-mc"
version = "0.1.0"
edition = "2021"
authors = ["S3fflex <ejiteambros@gmail.com>"]
description = "A high-performance, lightweight async Minecraft engine core built in Rust for Tauri launchers."
license = "MIT"
repository = "https://github.com/S3fflexDev/oxide-mc"
readme = "README.md"
keywords = ["minecraft", "launcher", "tauri", "async"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.52.1", features = ["full"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
hex = "0.4.3"
zip-extract = "0.4.1"
directories = "6.0"